--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
+    <!-- nambah aja sih -->
     <header>
       <div class="wrapper">
         <nav>
